<resources>
    <string name="app_name">Cars</string>
    <string name="buildcost">Enter build cost</string>
    <string name="regyear">Registration year -- </string>
    <string name="carvariant">Car variant -- </string>
    <string name="stateofreg">Car registration state -- </string>
    <string name="buildyourcost">Build your cost-- </string>
    <string name="drivenkm">Kilometers have been driven -- </string>
    <string name="action_settings">Settings</string>
    <string name="brand">Enter brand of car.</string>
    <string name="model">Enter model of car.</string>
    <string name="year">Select registration year of car.</string>
    <string name="variant">Select car variant.</string>
    <string name="state">Select your car registration state.</string>
    <string name="kilometers">How many kilometers have you driven your car for?</string>
</resources>
