<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    card_view:cardCornerRadius="10dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_green_100"
        android:padding="25dp">

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*****  "
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_card_title"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="6dp" />

            <TextView
                android:id="@+id/tvBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_card_title"
                tools:layout_editor_absoluteX="239dp"
                tools:layout_editor_absoluteY="41dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Model -- "
                android:textColor="@color/cardview_dark_background"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tvModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="@dimen/text_size"
                tools:layout_editor_absoluteX="273dp"
                tools:layout_editor_absoluteY="71dp" />


        </LinearLayout>




        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/regyear"
                android:textColor="@color/cardview_dark_background"
                card_view:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="122dp" />

            <TextView
                android:id="@+id/tvRegYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="TextView"
                android:textSize="@dimen/text_size"
                card_view:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="116dp" />


        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carvariant"
                android:textColor="@color/cardview_dark_background"
                tools:layout_editor_absoluteX="66dp"
                tools:layout_editor_absoluteY="187dp" />


            <TextView
                android:id="@+id/tvVariant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="TextView"
                android:textSize="@dimen/text_size"
                card_view:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="182dp" />


        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stateofreg"
                android:textColor="@color/cardview_dark_background"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="248dp" />
            <TextView
                android:id="@+id/tvState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="@dimen/text_size"
                tools:layout_editor_absoluteX="283dp"
                tools:layout_editor_absoluteY="242dp" />


        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drivenkm"
                android:textColor="@color/cardview_dark_background"
                tools:layout_editor_absoluteX="47dp"
                tools:layout_editor_absoluteY="337dp" />

            <TextView
                android:id="@+id/tvKilometers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="@dimen/text_size"
                tools:layout_editor_absoluteX="277dp"
                tools:layout_editor_absoluteY="307dp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_BiddingBox"
            android:orientation="horizontal"
            android:weightSum="10"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etBuilCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/buildcost"
                android:textSize="@dimen/text_size_card_title"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/btnSubmitCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:layout_weight="3"
                android:textAllCaps="false"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_Locked"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center"
            android:visibility="gone"
            android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvLocked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_card_title"
                android:textColor="@color/colorAccent"
                android:text="Locked"/>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
